# staff-directory

./: .editorconfig  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
src/: context.rs  department.rs  errors.rs  lib.rs  main.rs  menu_items.rs  staff.rs  traits.rs
src/tests/: mod.rs
