[package]
name = "staff-directory"
version = "0.1.0"
authors = ["Jimmy Chu <jimmychu0807@gmail.com>"]
edition = "2024"
description = "Staff Directory Application written in Rust"
license = "MIT"
repository = "https://github.com/jimmychu0807/staff-directory"
readme = "README.md"
keywords = ["cli", "app", "directory"]

[dependencies]
regex = "^1.11.1"
getset = "^0.1.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
clap = { version = "4.5.40", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
debug = false

[profile.dev]
opt-level = 0
debug = true

[lints.clippy]
new_without_default = "allow"
